--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 14px;
+  cursor: auto;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 20px;
+  cursor: auto;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cbcccc;
+  border-radius: 20px;
+  border: 3px solid white;
+  cursor: auto;
+}
